# SVCS

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.en  Doxyfile.ru  README.md  SECURITY.md  vcpkg.json
--help.svcs/.svcs/: config
.github/workflows/: cmake-multi-platform.yml  jekyll-gh-pages.yml
cli/: CMakeLists.txt
cli/include/: AddCommand.hxx  BaseCommand.hxx  BranchCommand.hxx  ClearCommand.hxx  CommandFactory.hxx  HelpCommand.hxx  HelpService.hxx  HistoryCommand.hxx  ICommand.hxx  InitCommand.hxx  MergeCommand.hxx  RemoveCommand.hxx  SaveCommand.hxx  StatusCommand.hxx  UndoCommand.hxx  Utils.hxx  VersionCommand.hxx
cli/src/: AddCommand.cxx  BranchCommand.cxx  ClearCommand.cxx  CommandFactory.cxx  HelpCommand.cxx  HelpService.cxx  HistoryCommand.cxx  InitCommand.cxx  MergeCommand.cxx  RemoveCommand.cxx  SaveCommand.cxx  StatusCommand.cxx  UndoCommand.cxx  VersionCommand.cxx  main.cxx
core/: CMakeLists.txt
core/include/: Blob.hxx  BranchManager.hxx  Commit.hxx  Index.hxx  ObjectStorage.hxx  Repository.hxx  RepositoryManager.hxx  Tree.hxx  Utils.hxx  VcsObject.hxx  commit.hxx  object.hxx
core/src/: Blob.cxx  BranchManager.cxx  Commit.cxx  Index.cxx  ObjectStorage.cxx  Repository.cxx  RepositoryManager.cxx  Tree.cxx  Utils.cxx  VcsObject.cxx  commit.cxx  object.cxx
docs/en/html/: AddCommandTest_8cxx.html  AddCommand_8cxx.html  AddCommand_8cxx_source.html  AddCommand_8hxx.html  AddCommand_8hxx.js  AddCommand_8hxx_source.html  BaseCommand_8hxx.html  BaseCommand_8hxx_source.html  BlobTest_8cxx.html  Blob_8cxx.html  Blob_8cxx_source.html  Blob_8hxx.html  Blob_8hxx.js  Blob_8hxx_source.html  BranchCommand_8cxx.html  BranchCommand_8cxx_source.html  BranchCommand_8hxx.html  BranchCommand_8hxx.js  BranchCommand_8hxx_source.html  BranchManagerTest_8cxx.html  BranchManager_8cxx.html  BranchManager_8cxx_source.html  BranchManager_8hxx.html  BranchManager_8hxx.js  BranchManager_8hxx_source.html  ClearCommandTest_8cxx.html  ClearCommandTest_8hxx.html  ClearCommandTest_8hxx.js  ClearCommandTest_8hxx_source.html  ClearCommand_8cxx.html  ClearCommand_8cxx_source.html  ClearCommand_8hxx.html  ClearCommand_8hxx.js  ClearCommand_8hxx_source.html  CommandFactory_8cxx.html  CommandFactory_8cxx_source.html  CommandFactory_8hxx.html  CommandFactory_8hxx.js  CommandFactory_8hxx_source.html  (+893 more)
docs/html/: annotated.html  annotated_dup.js  classAuthor-members.html  classAuthor.html  classCommit-members.html  classCommit.html  classCommit.js  classVcsObject-members.html  classVcsObject.html  classes.html  commit_8hxx_source.html  dir_02154ca61e61d4fecd00102651baa03a.html  dir_1abb32e6f63de035a774330a384ebf7d.html  dir_24d671cfcbc5d5238a6bd565a49d198f.html  dir_292bc32facf7a7d27e3acccbdbbac93c.html  dir_341ce614bbdd090ab735237ac33fdcac.html  dir_352e14aef572aa8a9f7c92aa6866620c.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_67b6664ed396be5ba3cca26a9928c8f6.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_721865ac18f5179cf2211d1b67312542.html  dir_8e60a433f40209337bfc8da400a6d866.html  dir_90fd98a0ba30abf7a6068a44995d2d6b.html  dir_9aae87f9453af4148d9278d771af8976.html  dir_a30fd5000947d323a9f363d528741348.html  dir_a79c168ca909e4d478fea20efc116125.html  dir_b67b133a83ac3df5d719be61f4ee2417.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f58959cff631ded84443e69be040de3c.html  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  (+5 more)
help/.svcs/: config
include/: commit.hxx  store.hxx
integration/: CMakeLists.txt
integration/include/: CompositeCommandFactory.hxx
integration/src/: CompositeCommandFactory.cxx  main.cxx
platform/: CMakeLists.txt
platform/include/: NetworkUtils.hxx
platform/src/: NetworkUtils.cxx
server/: CMakeLists.txt
server/include/: HubCommand.hxx  RemoteManager.hxx  RemoteProtocol.hxx  RepoCommand.hxx  SSHConfig.hxx  SSHServer.hxx  SSHSession.hxx  Server.hxx  ServerBaseCommand.hxx  ServerCommandFactory.hxx
server/src/: HubCommand.cxx  RemoteManager.cxx  RemoteProtocol.cxx  RepoCommand.cxx  SSHConfig.cxx  SSHServer.cxx  SSHSession.cxx  Server.cxx  ServerBaseCommand.cxx  ServerCommandFactory.cxx
services/: CMakeLists.txt  Event.hxx  EventBus.hxx  IObserver.hxx  ISubject.hxx
services/logging/: Logger.cxx  Logger.hxx
src/: commit.cxx  main.cxx
tests/: CMakeLists.txt  blob_test.cxx  commit_test.cxx  index_test.cxx  object_test.cxx  repomanager_test.cxx  repository_test.cxx  storage_test.cxx  tree_test.cxx
tests/cli/: AddCommandTest.cxx  CMakeLists.txt  ClearCommandTest.cxx  HelpCommandTest.cxx  HistoryCommandTest.cxx  InitCommandTest.cxx  RemoveCommandTest.cxx  SaveCommandTest.cxx  StatusCommandTest.cxx  UndoCommandTest.cxx  VersionCommandTest.cxx
tests/cli/mocks/: MockHelpService.hxx  MockHelpServiceAdapter.hxx  MockSubject.hxx
tests/cli/utils/: ClearCommandTest.cxx  ClearCommandTest.hxx  InitCommandIntegrationTest.cxx  InitCommandIntegrationTest.hxx  IntAddCommandTest.cxx  IntAddCommandTest.hxx  IntHelpCommandTest.cxx  IntHelpCommandTest.hxx  IntHistoryCommandTest.cxx  IntHistoryCommandTest.hxx  IntRemoveCommandTest.cxx  IntRemoveCommandTest.hxx  IntSaveCommand.cxx  IntSaveCommand.hxx  IntSaveCommandTest.cxx  IntSaveCommandTest.hxx  IntStatusCommandTest.cxx  IntStatusCommandTest.hxx  IntUndoCommandTest.cxx  IntUndoCommandTest.hxx  IntVersionCommandTest.cxx  IntVersionCommandTest.hxx
tests/core/: BlobTest.cxx  BranchManagerTest.cxx  CMakeLists.txt  CommitTest.cxx  IndexTest.cxx  ObjectTest.cxx  RepoManagerTest.cxx  RepositoryTest.cxx  StorageTest.cxx  TreeTest.cxx
tests/core/utils/: MockSubject.hxx
tests/server/: CMakeLists.txt  HubCommandTest.cxx  RemoteManagerTest.cxx  RemoteProtocolTest.cxx  RepoCommandTest.cxx  SSHConfigTest.cxx  SSHServerTest.cxx  SSHSessionTest.cxx  ServerTest.cxx
tools/: build.bat  build.sh  filter_en.sh  install.bat  install.sh  setup.sh  test.bat  test.sh
(+2161 files in other folders)
